@@ -1059,6 +1059,9 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Fix errors and warnings introduced into Linux sim build because of recent
 	  Cygwin-based sim changes
 	* NSH: Add mem command to display heap usage
+	* Added telnet NSH configuration for Neuros OSD.
+	* Basic integration of concurrent telnet/serial NSH functional on Neuros
+	  OSD (some bugs on background commands).
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
